Coverity analysis defect 173634: Uncaught exception

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-05-12
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uncaught exception

      If the exception is ever thrown, the program will crash. A C++ exception is thrown but never caught
      /src/mongo/transport/asio/asio_transport_layer.cpp:188: UNCAUGHT_EXCEPT 173634 An exception of type "asio::system_error const" is thrown but the exception specification "noexcept" doesn't allow it to be thrown. This will result in a call to terminate().

            Assignee:
            Amirsaman Memaripour
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: