SERVER-104705 Handle exceptions when starting ASIO reactors (#35828)

GitOrigin-RevId: 9c3f7b088a25bd61b2afbe9f5ba1c3ed3fb91955